--- a/Semana4/recsys.ipynb
+++ b/Semana4/recsys.ipynb
@@ -65,6 +65,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Los datos esta disponible para descargar directamente desde el repositorio de <a href='https://drive.google.com/file/d/1b2o9RS4jty1ATkxszRQlmEEEdQfbM2IU/view?usp=drive_link'>datos</a>.\n",
+    "\n",
     "Primero cargamos el conjunto de datos que contiene información sobre los artículos compartidos en la plataforma. Cada artículo incluye la fecha de compartición (marca de tiempo), la URL original, el título, el contenido en texto plano, el idioma del artículo (portugués: pt o inglés: en) e información sobre el usuario que compartió el artículo (autor). Hay dos tipos de eventos posibles en una marca de tiempo dada: \"CONTENT SHARED\" (contenido compartido), donde el artículo está disponible para los usuarios, y \"CONTENT REMOVED\" (contenido eliminado), donde el artículo ya no está disponible."
    ]
   },
@@ -304,7 +306,7 @@
     "display(adf.groupby(['eventType']).size())\n",
     "\n",
     "sns.set_theme(style='whitegrid', rc={'figure.figsize':(6, 4)})\n",
-    "sns.countplot(data=adf, x=\"eventType\", hue='eventType', palette='bone')"
+    "sns.countplot(data=adf, x=\"eventType\", hue='eventType', palette='bone')\n"
    ]
   },
   {
