--- a/Semana1/tareaforecasting.ipynb
+++ b/Semana1/tareaforecasting.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Después, procedemos a cargar los datos utilizando la biblioteca Pandas. Puedes descargar los datos desde el aula virtual o el repositorio de <a href='https://github.com/victormlgh/BigDataAplicadaNegociosV2/blob/main/Semana1/JPMaQS_Quantamental_Indicators.csv'>Github</a>, dependiendo de tu preferencia. "
+    "Después, procedemos a cargar los datos utilizando la biblioteca Pandas. Puedes descargar los datos desde el aula virtual o el repositorio de <a href='https://drive.google.com/file/d/11aVwE3RScSLiwi3nUapnT7KIXSlDVx1B/view?usp=drive_link'>datos</a>, dependiendo de tu preferencia. "
    ]
   },
   {
