update to SentimentAnalisys

--- a/Semana3/webscraping.ipynb
+++ b/Semana3/webscraping.ipynb
@@ -13,25 +13,25 @@
    "metadata": {},
    "source": [
     "<h1>Introducción</h1>\n",
-    "En el panorama actual de las empresas, la colaboración efectiva y el intercambio de conocimientos son piedras angulares para el éxito organizacional. En este contexto, plataformas como Deskdrop emergen como herramientas indispensables, facilitando la comunicación interna y el intercambio de información relevante entre los empleados de una empresa.\n",
+    "En la era digital, la reputación corporativa se ha convertido en un activo invaluable para las empresas, ya que influye en la percepción de los consumidores, las decisiones de inversión y la confianza del público en general. En este contexto, el acceso a datos en línea se ha vuelto fundamental para comprender y gestionar eficazmente la reputación de una empresa.\n",
     "\n",
-    "Deskdrop, una plataforma desarrollada por una empresa líder en tecnología, ofrece un entorno dinámico donde los profesionales pueden compartir artículos, noticias y recursos de interés con sus colegas. Esta plataforma no solo fomenta la difusión de información pertinente, sino que también promueve la colaboración y el diálogo entre equipos, impulsando así la innovación y el crecimiento dentro de la organización.\n",
+    "El web scraping, una técnica que permite extraer datos de sitios web de manera automatizada, emerge como una herramienta poderosa para explorar y analizar la reputación corporativa en el vasto panorama de Internet. Al recopilar información de fuentes públicas como redes sociales, sitios de reseñas, noticias y blogs, el web scraping ofrece una visión completa y actualizada de cómo una empresa es percibida en línea.\n",
     "\n",
-    "En este contexto, surge la necesidad de optimizar la experiencia de usuario y potenciar la utilidad de Deskdrop a través de un sistema de recomendación de artículos inteligente. Este sistema, basado en algoritmos avanzados de análisis de contenido y comportamiento de usuario, tiene como objetivo principal proporcionar recomendaciones personalizadas y relevantes a cada empleado, enriqueciendo así su experiencia en la plataforma y aumentando su participación activa.\n",
-    "\n",
-    "En este artículo, exploraremos el diseño y la implementación de dicho sistema de recomendación, así como su impacto en la dinámica de interacción y colaboración dentro de Deskdrop. Analizaremos cómo las interacciones entre los usuarios, combinadas con técnicas de aprendizaje automático y procesamiento de lenguaje natural, impulsan la generación de recomendaciones precisas y contextualizadas, adaptadas a las necesidades e intereses de cada individuo.\n",
+    "En esta primera parte, nos enfocaremos en los fundamentos del web scraping y su aplicación en la recopilación de datos relacionados con la reputación corporativa. \n",
     "\n",
     "<h1>Contexto</h1>\n",
     "\n",
-    "A través de este estudio, esperamos ofrecer una visión detallada de cómo las interacciones en plataformas de comunicación interna pueden transformarse en recomendaciones valiosas, promoviendo el intercambio de conocimientos y facilitando la toma de decisiones informadas en el entorno empresarial moderno.\n",
     "\n",
-    "Los datos que emplearemos contiene un período de 12 meses de la plataforma de comunicación interna DeskDrop. El conjunto de datos comprende alrededor de 73,000 interacciones de usuarios, involucrados en la plataforma al compartir más de 3,000 artículos públicos. Este conjunto de datos se destaca por sus atributos de artículo detallados, incluyendo URL, título y texto en dos idiomas, así como información contextual como fecha/hora, cliente utilizado y geolocalización. En DeskDrop, todos los usuarios deben iniciar sesión, permitiendo un seguimiento a largo plazo de preferencias sin depender de cookies. Además, registra varios tipos de interacciones de usuarios, como comentarios, me gusta y vistas, y rastrea estas interacciones en múltiples plataformas, incluyendo navegadores web y aplicaciones móviles, mostrando la diversidad de los hábitos de uso.\n",
+    "El contexto del web scraping se encuentra en el vasto mundo digital de internet, donde una gran cantidad de información se encuentra disponible en forma de páginas web. Estas páginas web contienen datos valiosos que pueden ser útiles para una variedad de propósitos, desde la investigación académica hasta el análisis de mercado y la monitorización de la reputación corporativa.\n",
     "\n",
-    "Este entorno de datos ofrece una oportunidad única para explorar y comprender las dinámicas de interacción en una plataforma de comunicación interna, así como para desarrollar y evaluar sistemas de recomendación que puedan mejorar la experiencia del usuario y la relevancia de los contenidos compartidos.\n",
     "\n",
-    "<h1>Sistemas de Recomendación: teoría e implementación </h1>\n",
+    "<h1>Web Scraping: teoría e implementación </h1>\n",
     "\n",
-    "Los sistemas de recomendación constituyen una parte fundamental de la inteligencia artificial y el análisis de datos, con aplicaciones que van desde plataformas de streaming hasta comercio electrónico y más allá. En teoría, estos sistemas emplean algoritmos avanzados para predecir las preferencias de los usuarios y recomendarles elementos relevantes. Esto se logra mediante el análisis de datos de usuario, como historiales de navegación, compras anteriores y patrones de comportamiento. La implementación práctica de los sistemas de recomendación implica la selección y adaptación de algoritmos adecuados para el contexto específico, así como la optimización continua a medida que se recopilan más datos y se refinan los modelos. Además, la evaluación rigurosa de la efectividad y precisión de las recomendaciones es crucial para garantizar una experiencia de usuario satisfactoria y mejorar la calidad del servicio ofrecido.\n",
+    "La práctica del web scraping implica la extracción automatizada de datos de páginas web utilizando herramientas y técnicas especializadas. Teóricamente, el proceso consiste en enviar solicitudes HTTP a un sitio web, analizar la estructura del HTML recibido y extraer los datos relevantes según ciertos criterios predefinidos, como etiquetas HTML específicas, clases o identificadores.\n",
+    "\n",
+    "En la implementación práctica, se utilizan diversas bibliotecas y frameworks de programación, como Beautiful Soup en Python, para realizar estas tareas de forma eficiente. Estas herramientas permiten a los desarrolladores escribir scripts que navegan por el contenido web, identifican patrones y extraen la información deseada.\n",
+    "\n",
+    "Sin embargo, la implementación efectiva del web scraping no se limita solo a la extracción de datos, sino que también implica el manejo de desafíos como la gestión de la tasa de solicitud para evitar bloqueos por parte del servidor, el tratamiento de datos inconsistentes o incompletos, y el cumplimiento de las políticas de uso del sitio web objetivo.\n",
     "\n",
     "<h2>Código en Python</h2>\n",
     "\n",
