--- a/Semana3/sentimentanalisys.ipynb
+++ b/Semana3/sentimentanalisys.ipynb
@@ -21,6 +21,8 @@
     "\n",
     "El objetivo de este estudio es examinar cómo los comentarios y opiniones expresados en Twitter ahora X reflejan la reputación corporativa de la empresa en el contexto de los despidos masivos. Al analizar el tono, la intensidad emocional y los temas recurrentes en los tweets relacionados con la empresa, podemos obtener una comprensión más profunda de cómo el público está respondiendo a la situación. Además, este análisis puede identificar áreas de preocupación y oportunidades para la empresa en términos de comunicación, gestión de crisis y acciones correctivas.\n",
     "\n",
+    "El cuaderno anterior <a href='https://github.com/victormlgh/BigDataAplicadaNegociosV2/blob/master/Semana3/webscraping.ipynb'>Explorando la Reputación Corporativa: Parte de Web Scraping </a> se enfoca en técnicas de web scraping para investigar la reputación corporativa de Facebook en el contexto de las opiniones expresadas en Twitter sobre los despidos masivos ocurridos en la empresa.\n",
+    "\n",
     "<h1>Contexto</h1>\n",
     "\n",
     "En el año 2023, Facebook, ahora conocida como Meta, se enfrentó a una serie de despidos masivos que tuvieron un impacto significativo en su reputación corporativa. La empresa, líder en redes sociales y tecnología digital, atravesó un período de turbulencia que generó preocupaciones tanto dentro como fuera de la organización. Los despidos masivos no solo afectaron a empleados directamente, sino que también resonaron en la comunidad de usuarios, inversores y observadores de la industria tecnológica en general.\n",
@@ -607,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Categorias</h2>\n",
+    "<h2>Categorías</h2>\n",
     "Después de calcular la polaridad para cada mensaje, procedemos a crear etiquetas que clasifiquen los mensajes en categorías de negativo, neutro y positivo según los valores obtenidos. Esto implica establecer umbrales o criterios para asignar cada mensaje a una categoría específica en función de su polaridad.\n",
     "\n",
     "Por ejemplo, si utilizamos una escala de polaridad que va de -1 a 1, podríamos definir que los mensajes con valores menores a cierto umbral se clasifican como negativos, los que se encuentran entre un rango cercano a cero se consideran neutros, y los que superan otro umbral se clasifican como positivos.\n",
@@ -1556,7 +1558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El modelo de Regresión Logística tiene un rendimiento de precisión del 92% en el conjunto de datos de prueba, lo que sugiere que es capaz de realizar predicciones precisas en datos no vistos. Además, tiene un rendimiento de precisión del 96% en el conjunto de datos de entrenamiento, lo que sugiere que el modelo se ajusta muy bien a los datos utilizados para entrenarlo. Esto indica que el modelo tiene un rendimiento alto tanto en el conjunto de datos utilizado para entrenamiento como en el conjunto de datos no visto utilizado para pruebas, lo que sugiere que es un modelo robusto y generaliza bien a datos nuevos. Sin embargo, es inferior al modelo SVM\n",
+    "El modelo de Regresión Logística tiene un rendimiento de precisión del 92% en el conjunto de datos de prueba, lo que sugiere que es capaz de realizar predicciones precisas en datos no vistos. Además, tiene un rendimiento de precisión del 96% en el conjunto de datos de entrenamiento, lo que sugiere que el modelo se ajusta muy bien a los datos utilizados para entrenarlo. Esto indica que el modelo tiene un rendimiento alto tanto en el conjunto de datos utilizado para entrenamiento como en el conjunto de datos no visto utilizado para pruebas, lo que sugiere que es un modelo robusto y generaliza bien a datos nuevos. Sin embargo, es inferior al modelo SVM anterior.\n",
     "\n",
     "El Reporte de Prueba ofrece una visión detallada del rendimiento del modelo de Regresión Logística en cada clase individualmente, así como una evaluación general de su rendimiento en el conjunto de datos de prueba.\n",
     "\n",
@@ -1720,7 +1722,7 @@
    "source": [
     "Seleccionamos el modelo SVM debido a su mayor rendimiento en comparación con los otros modelos evaluados en el estudio. Los reportes de evaluación y la comparación visual entre los modelos indicaron que el SVM superaba tanto al modelo de Regresión Logística como al de Multinomial Naive Bayes en términos de precisión, recall, F1-score y accuracy en el análisis de sentimiento. Por lo tanto, con el objetivo de obtener los mejores resultados posibles en la tarea de clasificación de sentimientos, optamos por utilizar el modelo SVM como el modelo preferido para este estudio.\n",
     "\n",
-    "<h1>Medir la Reputación Corposativa</h1>\n",
+    "<h1>Medir la Reputación Corporativa</h1>\n",
     "\n",
     "Ahora que hemos completado el entrenamiento de nuestro modelo de análisis de sentimientos, nos adentramos en una fase crucial: medir la reputación de Facebook en períodos clave, específicamente antes, durante y después de los despidos masivos. Este enfoque nos brinda la oportunidad de examinar de cerca cómo las percepciones y opiniones públicas sobre la empresa pueden haber fluctuado en respuesta a estos eventos significativos. A través del análisis de publicaciones, comentarios y menciones en las redes sociales relacionadas con Facebook, podremos capturar una amplia gama de voces y sentimientos expresados por los usuarios. Al comparar estos datos a lo largo del tiempo, podremos discernir tendencias, identificar puntos de inflexión y comprender mejor cómo la reputación de la empresa ha evolucionado en diferentes contextos. Este análisis no solo nos permitirá evaluar el impacto de los despidos masivos en la percepción pública de Facebook, sino que también nos proporcionará información valiosa para informar estrategias futuras de gestión de la imagen y la comunicación corporativa. Con una comprensión más profunda de la dinámica de la reputación de la empresa, estaremos mejor equipados para tomar decisiones informadas y responder de manera efectiva a los desafíos y oportunidades que se presenten en el futuro.\n",
     "\n",
@@ -1728,7 +1730,9 @@
     "\n",
     "Los sentimientos expresados en Twitter pueden ser un indicador útil de la reputación de una empresa debido a la naturaleza pública y accesible de la plataforma. Los usuarios de Twitter a menudo comparten sus opiniones y experiencias en tiempo real, lo que permite capturar rápidamente los cambios en la percepción pública. Al analizar los sentimientos expresados en los tweets relacionados con una empresa, es posible detectar tendencias emergentes, identificar problemas potenciales y evaluar la eficacia de las estrategias de gestión de la reputación. Esto puede proporcionar información valiosa para tomar decisiones empresariales informadas y responder proactivamente a las preocupaciones del público.\n",
     "\n",
-    "Pasamos a cargar tres datasets que contienen los tweets recopilados durante los tres períodos mencionados anteriormente. Estos datasets nos proporcionarán una amplia muestra de los sentimientos expresados en Twitter sobre Facebook en cada uno de los períodos de tiempo especificados. Al analizar estos datos, podremos entender mejor cómo ha evolucionado la percepción pública de Facebook a lo largo del tiempo, especialmente en relación con los eventos de despidos masivos. Este análisis nos permitirá obtener una visión más completa de cómo la reputación de la empresa ha sido influenciada por estos eventos y otros factores en diferentes momentos."
+    "Pasamos a cargar tres datasets que contienen los tweets recopilados durante los tres períodos mencionados anteriormente. Estos datasets nos proporcionarán una amplia muestra de los sentimientos expresados en Twitter sobre Facebook en cada uno de los períodos de tiempo especificados. Al analizar estos datos, podremos entender mejor cómo ha evolucionado la percepción pública de Facebook a lo largo del tiempo, especialmente en relación con los eventos de despidos masivos. Este análisis nos permitirá obtener una visión más completa de cómo la reputación de la empresa ha sido influenciada por estos eventos y otros factores en diferentes momentos.\n",
+    "\n",
+    "Para visualizar el proceso mediante el cual se obtienen estos datos, pueden consultar el cuaderno de Jupyter <a href='https://github.com/victormlgh/BigDataAplicadaNegociosV2/blob/master/Semana3/webscraping.ipynb'>Explorando la Reputación Corporativa: Parte de Web Scraping</a>. En este cuaderno, se detalla paso a paso cómo se realizó el web scraping para recopilar la información relevante sobre la reputación corporativa de Meta antes, durante y después de los despidos masivos. Además, se incluyen explicaciones sobre las herramientas y técnicas utilizadas, así como ejemplos de código para mostrar cómo se llevó a cabo el proceso de extracción de datos."
    ]
   },
   {
@@ -2825,7 +2829,7 @@
     "\n",
     "Además, los resultados resaltan la importancia de la comunicación corporativa estratégica durante períodos de crisis. La transparencia y la proactividad son fundamentales para abordar las preocupaciones del público y mantener la confianza del consumidor. Las empresas deben estar preparadas para responder rápidamente a los problemas emergentes, proporcionar información clara y precisa, y demostrar un compromiso genuino con la resolución de problemas. Al comunicarse de manera efectiva y transparente, las empresas pueden mitigar el impacto negativo de los eventos adversos en su reputación y construir una relación más sólida con los clientes y otros grupos de interés.\n",
     "\n",
-    "Además, el análisis de sentimientos en las redes sociales ofrece una oportunidad única para comprender mejor las necesidades y expectativas del mercado. Al identificar patrones y tendencias en los sentimientos expresados por los usuarios, las empresas pueden obtener información valiosa sobre la percepción de la marca, las preferencias del consumidor y las áreas de mejora. Esta información puede informar estrategias de marketing, desarrollo de productos y servicio al cliente, ayudando a las empresas a adaptarse de manera más efectiva a las demandas cambiantes del mercado y mantener una ventaja competitiva.\n",
+    "El análisis de sentimientos en las redes sociales ofrece una oportunidad única para comprender mejor las necesidades y expectativas del mercado. Al identificar patrones y tendencias en los sentimientos expresados por los usuarios, las empresas pueden obtener información valiosa sobre la percepción de la marca, las preferencias del consumidor y las áreas de mejora. Esta información puede informar estrategias de marketing, desarrollo de productos y servicio al cliente, ayudando a las empresas a adaptarse de manera más efectiva a las demandas cambiantes del mercado y mantener una ventaja competitiva.\n",
     "\n",
     "<h1>Conclusión</h1>\n",
     "\n",
